Repair blue navigation on Safari(Iphon)

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ nav button {
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	font-weight: bold;
+	color: var(--secondary);
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -65,10 +66,16 @@ nav button.active {
 	color: var(--primary);
 	text-shadow: 0 0 1rem var(--secondary);
 }
+
 nav button:hover {
 	color: var(--primary);
 	text-shadow: 0 0 2rem var(--secondary);
 }
+
+nav button:active {
+	color: var(--primary);
+}
+
 main {
 	width: 100%;
 	height: 100%;
@@ -134,12 +141,12 @@ section .social-media .instagram {
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-footer{
+footer {
 	padding: 0.5rem;
 	width: 100%;
 	background-color: black;
 }
-footer p{
+footer p {
 	font-size: 1.6rem;
 	text-align: center;
 	color: var(--primary);
